--- a/Meu perfil.html
+++ b/Meu perfil.html
@@ -3,6 +3,9 @@
     <title>Meu Perfil</title>
     <nav>
       <b>Meu Perfil</b>
+      <br>
+      <br>
+       <img src="./perfil.jpg" alt="">
       <Ul>
         <li><a href="Curriculum.html" target="_blank"> Curriculum </a></li>
       </Ul> 
@@ -33,7 +36,7 @@
             <ul>
             <li><a href="https://www.instagram.com/biasoares_16?igsh=MTZ1ZWMzczZiOHp1NQ%3D%3D&utm_source=qr" target="_blank">Instagram</a></li>
             </ul>
-        <footer> &copy;2024 Meu Perfil</footer>
+        <footer> &copy;2024 Todos os Direitos Reservados</footer>
     </main>
 <body>
 <title> Meu Site </title>
